# generic_data_benchmark

./: pyproject.toml
cmd/: analyze.py  run.py
config/: space.py
src/analyze/: load_data.py  process_data.py
src/playground/: networkx_graphs.py
src/run/: benchmark_runner.py  data_generator.py  filter.py  search_space.py  search_space_flattener.py  version_generator.py
src/utils/: config.py  dicts.py  names.py  time.py
